# socket-io

./: CREDITS.md  Makefile  README.md
engineio/: Cargo.toml
engineio/src/: error.rs  generator.rs  lib.rs  packet.rs  socket.rs
engineio/src/client/: builder.rs  client.rs  mod.rs
engineio/src/server/: accept.rs  builder.rs  http.rs  mod.rs  server.rs
engineio/src/socket/: builder.rs  mod.rs  socket.rs
engineio/src/transports/: mod.rs  polling.rs  websocket.rs
socketio/: Cargo.toml
socketio/examples/: client.rs  readme.rs  server.rs
socketio/src/: ack.rs  callback.rs  error.rs  lib.rs  packet.rs  payload.rs  socket.rs
socketio/src/client/: builder.rs  client.rs  mod.rs
socketio/src/server/: builder.rs  client.rs  mod.rs  server.rs
