[package]
name = "engineio-rs"
version = "0.1.0"
edition = "2021"
description = "An implementation of a engineio written in rust."
repository = "https://github.com/socket-iox/socket-io"
keywords = ["socketio", "engineio", "network", "protocol"]
categories = [
  "network-programming",
  "web-programming",
  "web-programming::websocket",
  "web-programming::socketio",
]
license = "MIT"


[dependencies]
adler32 = "1.2.0"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.13.0"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
tokio = "1.16.1"
tokio-util = "0.7.3"
tokio-tungstenite = { version = "0.17.2" }
tungstenite = "0.17.3"
tracing = "0.1"
http = "0.2.8"
httparse = "1.6.0"
reqwest = { version = "0.11.12", features = [
  "blocking",
  "rustls-tls",
  "stream",
] }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[lib]
