[package]
name = "socketio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1"
engineio = { version = "0.1.0", path = "../engineio" }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2.2"
regex = "1.6.0"

[lib]
